# Proyecto-Ocupacion

./: main-ocupacion-py  main-ocupacion.py  pyproject.toml  requirements.txt
